--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/styles.css">
 
-  <!-- Config + product seed -->
+  <!-- Config + data -->
   <script src="js/config.js"></script>
   <script src="js/product-data.js"></script>
 </head>
@@ -40,19 +40,13 @@
     </div>
   </header>
 
-  <!-- Hero with pinned ad placeholder -->
+  <!-- Hero -->
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="container hero-inner">
       <div class="hero-left">
-        <h1 class="hero-title">
-          <span class="accent site-name">NEPALI BAZAR</span><br>
-          Buy • Sell • Connect — Locally
-        </h1>
-        <p class="hero-sub">
-          A neon-lit marketplace for students, workers & creators.
-          Upload your item, add contact details and photos — buyers contact you directly.
-        </p>
+        <h1 class="hero-title"><span class="accent site-name">NEPALI BAZAR</span><br>Buy • Sell • Connect — Locally</h1>
+        <p class="hero-sub">A neon-lit marketplace for students, workers & creators. Upload your item, add contact details and photos — buyers contact you directly.</p>
         <div class="hero-cta">
           <a class="btn btn-primary" href="products.html">Browse Items</a>
           <a class="btn btn-ghost" href="sell.html">List an Item</a>
@@ -60,13 +54,13 @@
       </div>
 
       <div class="hero-right">
-        <!-- This gets filled dynamically by app.js (renderPinnedHero) -->
+        <!-- Featured / pinned ad (dynamic) -->
         <div id="pinned-ad"></div>
       </div>
     </div>
   </section>
 
-  <!-- Main grid -->
+  <!-- Main area: featured + grid -->
   <main class="container main-grid">
     <section class="content">
       <div class="section-head">
@@ -82,9 +76,7 @@
       </div>
 
       <div id="home-grid" class="card-grid"></div>
-      <div id="load-more" class="load-more-wrap">
-        <button id="load-more-btn" class="btn">Load more</button>
-      </div>
+      <div id="load-more" class="load-more-wrap"><button id="load-more-btn" class="btn">Load more</button></div>
     </section>
 
     <aside class="sidebar">
@@ -98,38 +90,37 @@
 
       <div class="sidebar-card">
         <h3>Post quickly</h3>
-        <p class="muted">
-          List your item in under a minute. Add photos & contact details so buyers can reach you directly.
-        </p>
+        <p class="muted">List your item in under a minute. Add photos & contact details so buyers can reach you directly.</p>
         <a class="btn btn-primary" href="sell.html">Create Listing</a>
       </div>
     </aside>
   </main>
 
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
       <div>© <span id="year"></span> <span class="site-name"></span>. Made with ❤️ in Nepal.</div>
-      <div class="muted">
-        Contact: <a href="mailto:help@nepalibazar.test">help@nepalibazar.test</a>
-      </div>
+      <div class="muted">Contact: <a href="mailto:help@nepalibazar.test">help@nepalibazar.test</a></div>
     </div>
   </footer>
 
-  <!-- App logic -->
+  <!-- Scripts -->
   <script src="js/app.js"></script>
+  <script src="js/nb-fixes.js"></script>
 
-  <!-- Branding + login state only -->
   <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-    document.querySelectorAll(".site-name").forEach(el => el.textContent = window.SITE_NAME || "NEPALI BAZAR");
+    // Footer branding
+    document.getElementById('year').textContent = new Date().getFullYear();
+    document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
+    // Logged-in state
     const loggedUser = localStorage.getItem("nb_logged_in_user");
     const loginLink = document.getElementById("login-link");
     const userInfo = document.getElementById("user-info");
     const usernameDisplay = document.getElementById("username-display");
     const logoutBtn = document.getElementById("logout-btn");
 
-    if (loggedUser) {
+    if(loggedUser){
       loginLink.style.display = "none";
       userInfo.style.display = "inline";
       usernameDisplay.textContent = loggedUser;
@@ -144,7 +135,5 @@
       location.reload();
     });
   </script>
-
-  <script src="js/nb-fixes.js"></script>
 </body>
 </html>
