--- a/products.html
+++ b/products.html
@@ -11,6 +11,7 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/styles.css">
 
+  <!-- Config + product bootstrap -->
   <script src="js/config.js"></script>
   <script src="js/product-data.js"></script>
 </head>
@@ -62,7 +63,7 @@
     </section>
 
     <aside class="sidebar">
-      <!-- ads injected by app.js -->
+      <!-- Ads injected by app.js -->
       <div class="ad-slot tall"></div>
       <div class="ad-slot small"></div>
 
@@ -80,7 +81,7 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div>© <span id="year"></span> <span class="site-name"></span></div>
+      <div>© <span id="year"></span> <span class="site-name"></span>. Made with ❤️ in Nepal.</div>
       <div class="muted">Contact: <a href="mailto:help@nepalibazar.test">help@nepalibazar.test</a></div>
     </div>
   </footer>
@@ -88,11 +89,11 @@
   <!-- Scripts -->
   <script src="js/app.js"></script>
   <script>
-    // Year + site name
+    // Footer branding
     document.getElementById('year').textContent = new Date().getFullYear();
     document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
-    // Login state toggle
+    // Logged-in state
     const loggedUser = localStorage.getItem("nb_logged_in_user");
     const loginLink = document.getElementById("login-link");
     const userInfo = document.getElementById("user-info");
