--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/styles.css">
 
-  <!-- Config + product data -->
   <script src="js/config.js"></script>
   <script src="js/product-data.js"></script>
 </head>
@@ -40,7 +39,7 @@
     </div>
   </header>
 
-  <!-- Hero -->
+  <!-- Animated hero -->
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="container hero-inner">
@@ -54,18 +53,21 @@
       </div>
 
       <div class="hero-right">
-        <!-- Dynamic ad / featured injected by app.js -->
+        <div class="hero-card neon-card">
+          <img src="assets/images/hero-1.jpg" alt="hero image" onerror="this.style.display='none'"/>
+          <div class="meta">Featured: Gaming Laptop — Rs. 85,000</div>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Main area -->
+  <!-- Main area: featured + grid -->
   <main class="container main-grid">
     <section class="content">
       <div class="section-head">
         <h2>Latest Listings</h2>
         <div class="controls">
-          <select id="filter-category" class="select"></select>
+          <select id="filter-cat" class="select"></select>
           <select id="sort-by" class="select">
             <option value="new">Newest</option>
             <option value="price-asc">Price: Low → High</option>
@@ -75,9 +77,7 @@
       </div>
 
       <div id="home-grid" class="card-grid"></div>
-      <div id="load-more" class="load-more-wrap">
-        <button id="load-more-btn" class="btn">Load more</button>
-      </div>
+      <div id="load-more" class="load-more-wrap"><button id="load-more-btn" class="btn">Load more</button></div>
     </section>
 
     <aside class="sidebar">
@@ -97,7 +97,6 @@
     </aside>
   </main>
 
-  <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
       <div>© <span id="year"></span> <span class="site-name"></span>. Made with ❤️ in Nepal.</div>
@@ -105,77 +104,125 @@
     </div>
   </footer>
 
-  <!-- Scripts -->
   <script src="js/app.js"></script>
-  <script src="js/nb-fixes.js"></script>
-  <script>
-    // Footer branding
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
+<script>
+  // Use the correct global array
+let products = window.NB_PRODUCTS || [];
 
-    // Logged-in state
-    const loggedUser = localStorage.getItem("nb_logged_in_user");
-    const loginLink = document.getElementById("login-link");
-    const userInfo = document.getElementById("user-info");
-    const usernameDisplay = document.getElementById("username-display");
-    const logoutBtn = document.getElementById("logout-btn");
+// --- Render latest listings with delete button for Sohaum only ---
+const homeGrid = document.getElementById("home-grid");
 
-    if(loggedUser){
-      loginLink.style.display = "none";
-      userInfo.style.display = "inline";
-      usernameDisplay.textContent = loggedUser;
-    } else {
-      loginLink.style.display = "inline";
-      userInfo.style.display = "none";
+function renderHomeListings() {
+  homeGrid.innerHTML = ""; // clear previous
+  products.forEach(product => {
+    const card = document.createElement("div");
+    card.className = "product-card";
+
+    card.innerHTML = `
+      <img src="${product.images?.[0] || 'assets/images/placeholder.jpg'}" alt="product image">
+      <h3>${product.title}</h3>
+      <p>Price: Rs. ${product.price}</p>
+      <p>Seller: ${product.seller}</p>
+      <p>Location: ${product.location}</p>
+      <p>${product.description}</p>
+      ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+    `;
+
+    if(loggedUser === "sohaum") {
+      const btn = card.querySelector(".delete-btn");
+      if(btn) {
+        btn.addEventListener("click", () => {
+          if(confirm("Are you sure you want to delete this listing?")) {
+            products = products.filter(p => p.id !== product.id);
+            window.NB_PRODUCTS = products; // update global
+            localStorage.setItem("nb_products_v1", JSON.stringify(products)); // persist
+            renderHomeListings();
+          }
+        });
+      }
     }
 
-    logoutBtn.addEventListener("click", function(e){
-      e.preventDefault();
-      localStorage.removeItem("nb_logged_in_user");
-      location.reload();
-    });
+    homeGrid.appendChild(card);
+  });
+}
 
-    // --- Product rendering on home page ---
-    let products = window.NB_PRODUCTS || [];
-    const homeGrid = document.getElementById("home-grid");
+renderHomeListings();
 
-    function saveProducts() {
-      window.NB_PRODUCTS = products;
+  document.getElementById('year').textContent = new Date().getFullYear();
+  document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
+
+  // Logged-in state
+  const loggedUser = localStorage.getItem("nb_logged_in_user");
+  const loginLink = document.getElementById("login-link");
+  const userInfo = document.getElementById("user-info");
+  const usernameDisplay = document.getElementById("username-display");
+  const logoutBtn = document.getElementById("logout-btn");
+
+  if(loggedUser){
+    loginLink.style.display = "none";
+    userInfo.style.display = "inline";
+    usernameDisplay.textContent = loggedUser;
+  } else {
+    loginLink.style.display = "inline";
+    userInfo.style.display = "none";
+  }
+
+  logoutBtn.addEventListener("click", function(e){
+    e.preventDefault();
+    localStorage.removeItem("nb_logged_in_user");
+    location.reload();
+  });
+
+  // --- Render latest listings with delete button for Sohaum only ---
+  const homeGrid = document.getElementById("home-grid");
+
+  // Use global products array from product-data.js
+  let products = window.NB_PRODUCTS || [];
+
+  // Save to localStorage function
+  function saveProducts() {
+    window.NB_PRODUCTS = products;
+    try {
       localStorage.setItem(window.LOCAL_STORAGE_KEY || "nb_products_v1", JSON.stringify(products));
+    } catch(e) {
+      console.warn("Failed saving products", e);
     }
+  }
 
-    function renderHomeListings() {
-      homeGrid.innerHTML = "";
-      products.forEach(product => {
-        const card = document.createElement("div");
-        card.className = "product-card";
+  function renderHomeListings() {
+    homeGrid.innerHTML = ""; // clear previous
+    products.forEach(product => {
+      const card = document.createElement("div");
+      card.className = "product-card";
 
-        card.innerHTML = `
-          <img src="${product.images && product.images[0] ? product.images[0] : 'assets/images/placeholder.jpg'}" alt="product image">
-          <h3>${product.title}</h3>
-          <p>Price: Rs. ${product.price}</p>
-          <p>Seller: ${product.seller}</p>
-          <p>Location: ${product.location}</p>
-          <p>${product.description}</p>
-          ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
-        `;
+      card.innerHTML = `
+        <img src="${product.images && product.images[0] ? product.images[0] : 'assets/images/placeholder.jpg'}" alt="product image">
+        <h3>${product.title}</h3>
+        <p>Price: Rs. ${product.price}</p>
+        <p>Seller: ${product.seller}</p>
+        <p>Location: ${product.location}</p>
+        <p>${product.description}</p>
+        ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+      `;
 
-        if(loggedUser === "sohaum") {
-          const btn = card.querySelector(".delete-btn");
-          btn.addEventListener("click", () => {
-            if(confirm("Delete this listing?")) {
-              products = products.filter(p => p.id !== product.id);
-              saveProducts();
-              renderHomeListings();
-            }
-          });
-        }
+      // Add delete functionality for Sohaum only
+      if(loggedUser === "sohaum") {
+        card.querySelector(".delete-btn").addEventListener("click", () => {
+          if(confirm("Are you sure you want to delete this listing?")){
+            products = products.filter(p => p.id !== product.id);
+            saveProducts();
+            renderHomeListings();
+          }
+        });
+      }
 
-        homeGrid.appendChild(card);
-      });
-    }
+      homeGrid.appendChild(card);
+    });
+  }
 
-    renderHomeListings();
-  </script>
+  renderHomeListings();
+</script>
+
+  <script src="js/nb-fixes.js"></script>
 </body>
 </html>
