--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     </div>
   </header>
 
+  <!-- TRENDING CAROUSEL (Daraz/Amazon style) -->
+  <section id="trending-section" class="trending-section" aria-label="Trending items">
+    <div class="trending-wrap">
+      <button class="trending-arrow left" id="trending-left" aria-label="Scroll left">‹</button>
+      <div class="trending-scroll" id="trending-scroll" role="list"></div>
+      <button class="trending-arrow right" id="trending-right" aria-label="Scroll right">›</button>
+    </div>
+  </section>
+
+
   <!-- Hero banner inserted by assistant -->
   <section class="hero">
     <div class="hero-inner">
