--- a/products.html
+++ b/products.html
@@ -39,6 +39,16 @@
     </div>
   </header>
 
+  <!-- TRENDING CAROUSEL (Daraz/Amazon style) -->
+  <section id="trending-section" class="trending-section" aria-label="Trending items">
+    <div class="trending-wrap">
+      <button class="trending-arrow left" id="trending-left" aria-label="Scroll left">‹</button>
+      <div class="trending-scroll" id="trending-scroll" role="list"></div>
+      <button class="trending-arrow right" id="trending-right" aria-label="Scroll right">›</button>
+    </div>
+  </section>
+
+
   <!-- Main Content -->
   <main class="container main-grid products-page">
     <section class="content wide">
